--- a/internal/web/static/index.html
+++ b/internal/web/static/index.html
@@ -34,6 +34,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Inter',Roboto,sans
 header{display:flex;align-items:center;justify-content:space-between;padding:20px 0 16px;margin-bottom:24px}
 header h1{font-size:22px;font-weight:700;letter-spacing:-.3px;display:flex;align-items:center;gap:10px}
 header h1 span{color:var(--accent);background:var(--accent-bg);padding:2px 10px;border-radius:6px;font-size:18px;letter-spacing:.5px}
+.version{font-size:12px;color:var(--text3);font-weight:400;font-family:'SF Mono',Consolas,monospace;margin-left:4px}
 .badge{display:inline-flex;align-items:center;gap:6px;padding:5px 14px;border-radius:20px;font-size:12px;font-weight:600;letter-spacing:.3px}
 .badge-green{background:var(--green-bg);color:var(--green);border:1px solid rgba(16,185,129,.2)}
 .badge-red{background:var(--red-bg);color:var(--red);border:1px solid rgba(244,63,94,.2)}
@@ -122,7 +123,7 @@ input::placeholder{color:var(--text3)}
 <body>
 <div class="container">
   <header>
-    <h1><span>WARP</span> Proxies</h1>
+    <h1><span>WARP</span> Proxies <span class="version" id="versionText"></span></h1>
     <div id="statusBadge" class="badge badge-red">Stopped</div>
   </header>
 
@@ -146,6 +147,7 @@ input::placeholder{color:var(--text3)}
       <button onclick="showBatchModal()">+ Batch Add</button>
       <button onclick="restartEngine()">Restart Engine</button>
       <button onclick="showSettingsModal()">Settings</button>
+      <button id="btnUpdate" onclick="triggerUpdate()">Update</button>
     </div>
   </div>
 
@@ -410,6 +412,33 @@ async function saveSettings() {
   } catch (e) { toast(e.message, 'error'); }
 }
 
+async function triggerUpdate() {
+  if (!confirm('Update warp-proxies to latest version? The service will restart.')) return;
+  try {
+    const btn = document.getElementById('btnUpdate');
+    btn.disabled = true;
+    btn.textContent = 'Updating...';
+    await api('/api/update', { method: 'POST' });
+    toast('Update started, reconnecting...');
+    setTimeout(function poll() {
+      fetch('/api/version').then(r => { if (r.ok) location.reload(); else setTimeout(poll, 2000); }).catch(() => setTimeout(poll, 2000));
+    }, 3000);
+  } catch (e) {
+    toast(e.message, 'error');
+    const btn = document.getElementById('btnUpdate');
+    btn.disabled = false;
+    btn.textContent = 'Update';
+  }
+}
+
+async function loadVersion() {
+  try {
+    const data = await api('/api/version');
+    document.getElementById('versionText').textContent = data.version;
+  } catch (e) { /* ignore */ }
+}
+
+loadVersion();
 refresh();
 setInterval(refresh, 5000);
 </script>
